# tft-forecasting

./: .flake8  .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: pytest.yml
tests/: test_gate_add_norm.py  test_glu.py  test_grn.py  test_integration.py  test_interpretable_multi_head.py  test_quantile_forecast.py  test_scaled_dot_prod_attention.py  test_variable_selection.py
tft_forecasting/: __init__.py
tft_forecasting/model/: functions.py  tft.py  utils.py
tft_forecasting/model/components/: __init__.py  embedding.py  gate_add_norm.py  glu.py  grn.py  interpretable_multi_head.py  quantile_output.py  scaled_dot_prod_attention.py  variable_selection.py
webapp/frontend/: package-lock.json
webapp/frontend/src/: App.vue
webapp/frontend/src/components/: TimeSeriesVisualization.vue
