[tool.poetry]
name = "tft-forecasting"
version = "0.1.0"
description = "Temporal Fusion Transformers for Interpretable Multi-Horizon Forecasting"
authors = ["Thomas Kientz <thomas@kientz.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
