[tool.poetry]
name = "tft-forecasting"
version = "0.1.0"
description = "Temporal Fusion Transformers for Interpretable Multi-Horizon Forecasting"
authors = ["Thomas Kientz <thomas@kientz.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
jupyter = "^1.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
